fix: align search form elements height and button text

--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,7 @@ header img {
 .logo-form {
   background-color: var(--main-bg-color);
   width: 50px;
+  height: 100%;
   border-radius: 15px 0 0 15px;
   display: flex;
   justify-content: center;
@@ -181,6 +182,7 @@ header img {
   flex-grow: 1;
   font-size: 18px;
   font-weight: 700;
+  line-height: 1;
 }
 
 .search-btn-mobile {
